# dpdk

./: Cargo.toml  MAINTAINERS  meson.build
.ci/: linux-build.sh
.github/workflows/: build.yml
app/test/: meson.build  test_dmadev.c
buildtools/: meson.build
buildtools/chkincs/: meson.build
buildtools/rust/: build.rs  lib.rs  meson.build  wrapper.h
drivers/: meson.build
drivers/dma/: meson.build
kernel/freebsd/contigmem/: contigmem.c
lib/dmadev/: rte_dmadev.c  rte_dmadev.h  rte_dmadev_core.h  rte_dmadev_pmd.h  version.map
lib/eal/common/: eal_common_options.c  eal_option_list.h  eal_options.h  eal_private.h
lib/eal/freebsd/: eal.c
lib/eal/linux/: eal.c
lib/eal/windows/: eal.c
